worked on petitions changed and changed call senators buttons

--- a/Share Your Voice/Base.lproj/Main.storyboard
+++ b/Share Your Voice/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="26" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mLB-8L-Y32">
                                 <rect key="frame" x="45" y="195" width="325" height="550"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <mutableString key="text">Share Your Voice is a St. Louis based Black-forward space designed to continue the Black Lives Matter Movement and amplify Black voices. Founded on Instagram by high school student Bryant Ewing, Share Your Voice has branched out and has now spread to all of the St. Louis area. This app is designed to be a database for information on St. Louis protests as well as highlighting Black-owned businesses and art. It is a space space for Black and non-Black people to come together and share thoughts, support, and experiences. We encourage you to Share Your Voice and speak out against injustice.</mutableString>
+                                <string key="text">Share Your Voice is a St. Louis based Black-forward space designed to continue the Black Lives Matter Movement and amplify Black voices. Founded on Instagram by high school student Bryant Ewing, Share Your Voice has branched out and has now spread to all of the St. Louis area. This app is designed to be a database for information on St. Louis protests as well as highlighting Black-owned businesses and art. It is a space space for Black and non-Black people to come together and share thoughts, support, and experiences. We encourage you to Share Your Voice and speak out against injustice.</string>
                                 <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="21"/>
                                 <color key="textColor" red="0.039355508980000002" green="0.1044288352" blue="0.1199965402" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -153,7 +153,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="characterWrap" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U0Y-5Z-D9m">
-                                <rect key="frame" x="33" y="360" width="361" height="103"/>
+                                <rect key="frame" x="27" y="370" width="361" height="103"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.21212399009999999" green="0.56258785720000004" blue="0.54561430219999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="tintColor" red="0.21212399009999999" green="0.56258785720000004" blue="0.54561430219999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -207,39 +207,48 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qyh-ip-a8d">
-                                <rect key="frame" x="160" y="132" width="95" height="30"/>
+                                <rect key="frame" x="52" y="110" width="311" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Call Roy Blunt"/>
+                                <color key="backgroundColor" red="0.20849740510000001" green="0.56165140869999997" blue="0.54558801649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="28"/>
+                                <state key="normal" title="Call Roy Blunt">
+                                    <color key="titleColor" red="0.95295482870000003" green="0.87440389389999995" blue="0.75853830580000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="callSenator:" destination="dGt-Ek-YlG" eventType="touchUpInside" id="GGd-8r-lc3"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cJJ-le-Tm6">
-                                <rect key="frame" x="170" y="297" width="97" height="34"/>
+                                <rect key="frame" x="159" y="188" width="97" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="khD-y7-Xdm">
-                                <rect key="frame" x="149" y="169" width="116" height="30"/>
+                                <rect key="frame" x="52" y="264" width="311" height="68"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Call Josh Hawley"/>
+                                <color key="backgroundColor" red="0.20448979740000001" green="0.56165581939999998" blue="0.54559499030000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="28"/>
+                                <state key="normal" title="Call Josh Hawley">
+                                    <color key="titleColor" red="0.95295482870000003" green="0.87440389389999995" blue="0.75853830580000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Other Numbers to Call/Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p2p-zW-Se6">
+                                <rect key="frame" x="52" y="456" width="280" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GIg-0B-oJo">
-                                <rect key="frame" x="170" y="349" width="97" height="34"/>
+                                <rect key="frame" x="159" y="340" width="97" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Other Numbers to Call" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p2p-zW-Se6">
-                                <rect key="frame" x="133" y="218" width="171" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="prl-si-881"/>
                     </view>
                     <navigationItem key="navigationItem" id="F7Y-fn-JvW"/>
@@ -257,23 +266,31 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
             </objects>
-            <point key="canvasLocation" x="1941" y="110"/>
+            <point key="canvasLocation" x="1940.5797101449277" y="109.82142857142857"/>
         </scene>
-        <!--View Controller-->
+        <!--Petitions View Controller-->
         <scene sceneID="L0h-Nh-Wzj">
             <objects>
-                <viewController id="rFT-ap-dZM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ibD-0P-Qlr">
+                <viewController id="rFT-ap-dZM" customClass="petitionsViewController" customModule="Share_Your_Voice" customModuleProvider="target" sceneMemberID="viewController">
+                    <textView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" id="hfR-mn-a2q">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="x3q-lN-Mpb"/>
-                    </view>
+                        <string key="text">https://go.theactionpac.com/sign/stand-with-breonna?akid=s210485..X0LN4n
+https://www.change.org/p/district-attorney-tom-durden-justice-for-ahmaud-arbery-i-run-with-maud?</string>
+                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" textContentType="url"/>
+                        <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                    </textView>
                     <navigationItem key="navigationItem" id="56z-68-m8G"/>
+                    <connections>
+                        <outlet property="petitionsTextView" destination="hfR-mn-a2q" id="Hbs-g7-EY0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uIU-Tt-cwq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2726" y="110"/>
+            <point key="canvasLocation" x="2724.6376811594205" y="109.82142857142857"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="POO-0B-I6j">
